--- a/app/globals.css
+++ b/app/globals.css
@@ -56,6 +56,10 @@ body {
     @apply text-blue-500 font-semibold underline;
   }
 
+  h1 {
+    @apply text-3xl font-bold mb-6 text-gray-800;
+  }
+
   h3 {
     @apply mb-4 font-semibold text-gray-600;
   }
