--- a/app/globals.css
+++ b/app/globals.css
@@ -60,7 +60,19 @@ body {
     @apply text-3xl font-bold mb-6 text-gray-800;
   }
 
+  h2 {
+    @apply text-2xl mb-6 text-gray-800;
+  }
+
   h3 {
     @apply mb-4 font-semibold text-gray-600;
+  }
+
+  p {
+    @apply text-gray-600;
+  }
+
+  code {
+    @apply py-[1px] px-[2px] rounded-sm bg-gray-200 text-blue-600;
   }
 } 
