--- a/app/globals.css
+++ b/app/globals.css
@@ -53,7 +53,7 @@ body {
   }
 
   a {
-    @apply text-blue-500 font-semibold underline;
+    @apply text-blue-500 hover:text-blue-800 font-semibold underline;
   }
 
   h1 {
